--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
-.App {
+body {
   text-align: center;
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  padding: 10%;
+}
+
+button {
+  border-radius: 8px;
+  margin: auto;
+  padding: 10px;
+  font-size: medium;
 }
